demo: sipeed longan nano demo migrated to new build system

--- a/demo/sipeed-longan-nano/configs/sipeed-longan-nano_flash_defconfig
+++ b/demo/sipeed-longan-nano/configs/sipeed-longan-nano_flash_defconfig
@@ -41,6 +41,7 @@ CONFIG_CC_NO_OPTIMIZATION=y
 # CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE3 is not set
 CONFIG_DEBUG=y
 # CONFIG_NDEBUG is not set
+# CONFIG_MAP is not set
 CONFIG_EXTRA_CFLAGS=""
 CONFIG_LDSCRIPT="${srctree}/samples/ldscripts/gd32vf103cbt6_flash_xip.ld"
 CONFIG_EXTRA_LDFLAGS=""
@@ -120,7 +121,7 @@ CONFIG_UART_GD32VF103=y
 #
 # Watchdog drivers
 #
-CONFIG_WD_GD32VF103_DWDGT=y
+CONFIG_WD_GD32VF103_FWDGT=y
 CONFIG_STAGING=y
 
 #
@@ -136,3 +137,8 @@ CONFIG_ADC_GD32VF103=y
 # CAN drivers
 #
 CONFIG_CAN_GD32VF103=y
+
+#
+# TWI drivers
+#
+CONFIG_TWI_GD32VF103=y
