--- a/demo/sipeed-longan-nano/Makefile
+++ b/demo/sipeed-longan-nano/Makefile
@@ -9,19 +9,20 @@ ifeq ($(skip-makefile),)
 PWD := $(shell pwd)
 KBUILD_SRC := ../..
 
-TARGETS := sipeed-longan-nano_ram.elf
+# TARGETS := sipeed-longan-nano_ram.elf
 TARGETS += sipeed-longan-nano_flash.elf
 
 defconfig = $(@:%.elf=%_defconfig)
 
 all: $(TARGETS)
-
-%:
-	$(Q)$(MAKE) -C $(KBUILD_SRC) O=$(PWD) $@
+	@
 
 %.elf: FORCE
 	$(Q)$(MAKE) -C $(KBUILD_SRC) O=$(PWD) $(defconfig)
 	$(Q)$(MAKE) -C $(KBUILD_SRC) O=$(PWD) TARGET=$@
+
+%:
+	$(Q)$(MAKE) -C $(KBUILD_SRC) O=$(PWD) $@
 
 PHONY += FORCE
 FORCE:
