--- a/demo/win32/Makefile
+++ b/demo/win32/Makefile
@@ -1,44 +1,24 @@
-EXE := win32-blink.exe
+# 1st: sources & targets
+target := win32.exe
 
-CC := gcc
-CROSS := i686-w64-mingw32-
+c_src-y += main.c
 
-PICORTOS_DIR := $(abspath ../..)
-BUILD_DIR = build
+# avoid double-inclusion
+ifeq ($(skip-makefile),)
+PWD := $(shell pwd)
+KBUILD_SRC := ../..
 
-CFLAGS += -Wall -Wextra -I. -I$(PICORTOS_DIR) -g
-CFLAGS += -I$(PICORTOS_DIR)/arch/include
-CFLAGS += -I$(PICORTOS_DIR)/arch/win32
+all: $(target)
+	@
 
-LDFLAGS += -g
+%.exe: FORCE
+	$(Q)$(MAKE) -C $(KBUILD_SRC) O=$(PWD) TARGET=$@
 
-# picoRTOS
-SRC_C_FILES += $(PICORTOS_DIR)/picoRTOS.c
-SRC_C_FILES += $(PICORTOS_DIR)/arch/win32/picoRTOS_port.c
+%:
+	$(Q)$(MAKE) -C $(KBUILD_SRC) O=$(PWD) $@
 
-# demo
-SRC_C_FILES += blink.c
+PHONY += FORCE
+FORCE:
 
-OBJ_FILES := $(SRC_C_FILES:%.c=%.o)
-OBJ_FILES += $(SRC_S_FILES:%.S=%.o)
-
-# fix paths
-OBJ_FILES := $(addprefix $(BUILD_DIR)/,$(OBJ_FILES))
-
-all: $(EXE)
-
-$(EXE): $(OBJ_FILES)
-	-mkdir -p $(@D)
-	$(CROSS)$(CC) $^ $(LDFLAGS) -o $@
-
-$(BUILD_DIR)/%.o: %.c
-	-mkdir -p $(@D)
-	$(CROSS)$(CC) $(CFLAGS) -c $< -o $@
-
-splint:
-cppcheck:
-	@echo "dummy analysis"
-
-clean:
-	-rm -rf $(BUILD_DIR)
-	-rm -f $(EXE)
+.PHONY: $(PHONY)
+endif
