port: moved arch/mips32 to arch/mips

--- a/arch/Kconfig
+++ b/arch/Kconfig
@@ -31,7 +31,7 @@ endchoice
 source "arch/arm/Kconfig"
 source "arch/avr/Kconfig"
 source "arch/c2000/Kconfig"
-source "arch/mips32/Kconfig"
+source "arch/mips/Kconfig"
 # source "arch/powerpc/Kconfig"
 source "arch/riscv/Kconfig"
 source "arch/pthread/Kconfig"
