--- a/arch/mips/Makefile
+++ b/arch/mips/Makefile
@@ -1,5 +1,5 @@
 # MIPS arch makefile
-arch-mips := $(srctree)/arch/mips32
+arch-mips := $(srctree)/arch/mips
 
 c_src-$(CONFIG_M51XX) += $(arch-mips)/m51xx/picoRTOS_port.c
 a_src-$(CONFIG_M51XX) += $(arch-mips)/m51xx/picoRTOS_portasm.S
@@ -14,3 +14,4 @@ include-$(CONFIG_MACH_PIC32MZ) += -I$(arch-mips)/m51xx/mach-pic32mz
 
 ccflags-$(CONFIG_MIPS) += $(include-y)
 asflags-$(CONFIG_MIPS) += $(include-y)
+ldflags-$(CONFIG_MIPS) += -nostartfiles -nostdlib
