demo: arduino due CAN loopback fix

--- a/demo/arduino-due/configs/arduino-due_flash_defconfig
+++ b/demo/arduino-due/configs/arduino-due_flash_defconfig
@@ -8,6 +8,8 @@ CONFIG_ARM=y
 # CONFIG_MIPS is not set
 # CONFIG_PPC is not set
 # CONFIG_RISCV is not set
+# CONFIG_PTHREAD is not set
+# CONFIG_WIN32 is not set
 
 #
 # ARM architecture
@@ -28,7 +30,7 @@ CONFIG_SINGLE_CORE=y
 #
 CONFIG_SYSCLK_HZ=84000000
 CONFIG_TICK_HZ=1000
-CONFIG_TASK_COUNT=12
+CONFIG_TASK_COUNT=14
 CONFIG_DEFAULT_STACK_COUNT=128
 CONFIG_DEADLOCK_COUNT=1000
 
