port: added Renesas RA4 to Kconfig

--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -25,11 +25,12 @@ config L1_CACHE_LINESIZE
        depends on ARMV7EM
        default 32 if MACH_STM32H7XX
        default 16 if MACH_ATSAME5X
+       default 4 if MACH_RENESAS_RA4
 
 config CACHE_MAINTENANCE
        bool "Cache maintenance operations"
        depends on ARMV7EM
        default y if MACH_STM32H7XX
-       default n if MACH_ATSAME5X
-
+       default n if (MACH_ATSAME5X || MACH_RENESAS_RA4)
+       
 endmenu
