drivers: support for Renesas R4 clock system (staging)

--- a/staging/drivers/clock/Kconfig
+++ b/staging/drivers/clock/Kconfig
@@ -8,4 +8,8 @@ config CLOCK_NXP_SIU
        depends on POWERPC
        bool "NXP SIU clock"
 
+config CLOCK_RENESAS_R4
+       depends on ARM
+       bool "Renesas R4 clock"
+
 endmenu
