--- a/staging/drivers/mux/Kconfig
+++ b/staging/drivers/mux/Kconfig
@@ -8,4 +8,8 @@ config MUX_NXP_SIUL2
        depends on POWERPC
        bool "NXP SIUL2 MUX"
 
+config MUX_RENESAS_RA4
+       depends on ARM
+       bool "RENESAS RA4 MUX"
+
 endmenu
