gpio: support for Renesas RA4 (staging)

--- a/staging/drivers/gpio/Makefile
+++ b/staging/drivers/gpio/Makefile
@@ -5,3 +5,4 @@ staging-drivers-gpio := $(srctree)/staging/drivers/gpio
 
 c_src-$(CONFIG_GPIO_NXP_SIU) += $(staging-drivers-gpio)/gpio-nxp_siu.c
 c_src-$(CONFIG_GPIO_NXP_SIUL2) += $(staging-drivers-gpio)/gpio-nxp_siul2.c
+c_src-$(CONFIG_GPIO_RENESAS_RA4) += $(staging-drivers-gpio)/gpio-renesas_ra4.c
