--- a/staging/drivers/spi/Makefile
+++ b/staging/drivers/spi/Makefile
@@ -4,3 +4,4 @@
 staging-drivers-spi := $(srctree)/staging/drivers/spi
 
 c_src-$(CONFIG_SPI_NXP_DSPI) += $(staging-drivers-spi)/spi-nxp_dspi.c
+c_src-$(CONFIG_SPI_RENESAS_RA4) += $(staging-drivers-spi)/spi-renesas_ra4.c
