--- a/staging/drivers/pwm/Makefile
+++ b/staging/drivers/pwm/Makefile
@@ -4,3 +4,4 @@
 staging-drivers-pwm := $(srctree)/staging/drivers/pwm
 
 c_src-$(CONFIG_PWM_NXP_EMIOS) += $(staging-drivers-pwm)/pwm-nxp_emios.c
+c_src-$(CONFIG_PWM_RENESAS_RA4_GPT) += $(staging-drivers-pwm)/pwm-renesas_ra4_gpt.c
