drivers: add support for Renesas RA4 SCI UART (staging)

--- a/staging/drivers/uart/Makefile
+++ b/staging/drivers/uart/Makefile
@@ -4,3 +4,4 @@
 staging-drivers-uart := $(srctree)/staging/drivers/uart
 
 c_src-$(CONFIG_UART_NXP_LINFLEXD) += $(staging-drivers-uart)/uart-nxp_linflexd.c
+c_src-$(CONFIG_UART_RENESAS_RA4_SCI) += $(staging-drivers-uart)/uart-renesas_ra4_sci.c
