--- a/staging/drivers/adc/Makefile
+++ b/staging/drivers/adc/Makefile
@@ -6,3 +6,4 @@ staging-drivers-adc := $(srctree)/staging/drivers/adc
 c_src-$(CONFIG_ADC_GD32VF103) += $(staging-drivers-adc)/adc-gd32vf103.c
 c_src-$(CONFIG_ADC_NXP_EQADC) += $(staging-drivers-adc)/adc-nxp_eqadc.c
 c_src-$(CONFIG_ADC_NXP_SAR) += $(staging-drivers-adc)/adc-nxp_sar.c
+c_src-$(CONFIG_ADC_RENESAS_RA4) += $(staging-drivers-adc)/adc-renesas_ra4.c
