--- a/staging/drivers/twi/Kconfig
+++ b/staging/drivers/twi/Kconfig
@@ -12,4 +12,8 @@ config TWI_STM32H7XX
        depends on ARM
        bool "STM32H7xx series TWI"
 
+config TWI_RENESAS_RA4
+       depends on ARM
+       bool "Renesas RA4 series TWI"
+
 endmenu
