--- a/drivers/mux/Kconfig
+++ b/drivers/mux/Kconfig
@@ -36,4 +36,8 @@ config MUX_TINYAVR
        depends on AVR
        bool "TinyAVR/ATTiny series MUX"
 
+config MUX_RENESAS_RA4
+       depends on ARM
+       bool "RENESAS RA4 MUX"
+
 endmenu
