pwm: unstaged Renesas RA4 series GPT PWM driver

--- a/drivers/pwm/Kconfig
+++ b/drivers/pwm/Kconfig
@@ -40,4 +40,8 @@ config PWM_TINYAVR
        depends on AVR
        bool "TinyAVR/ATTiny series PWMs"
 
+config PWM_RENESAS_RA4_GPT
+       depends on ARM
+       bool "Renesas RA4 GPT PWM"
+
 endmenu
