uart: unstaged Renesas RA4 series SCI UART driver

--- a/drivers/uart/Kconfig
+++ b/drivers/uart/Kconfig
@@ -32,4 +32,8 @@ config UART_TINYAVR_USART
        depends on AVR
        bool "TinyAVR/ATTiny series UART/USART"
 
+config UART_RENESAS_RA4_SCI
+       depends on ARM
+       bool "Renesas RA4 UART SCI"
+
 endmenu
