--- a/drivers/uart/Makefile
+++ b/drivers/uart/Makefile
@@ -11,3 +11,4 @@ c_src-$(CONFIG_UART_PIC32MX) += $(drivers-uart)/uart-pic32mx.c
 c_src-$(CONFIG_UART_ATSAM3X) += $(drivers-uart)/uart-sam3x.c
 c_src-$(CONFIG_UART_STM32H7XX) += $(drivers-uart)/uart-stm32h7xx.c
 c_src-$(CONFIG_UART_TINYAVR_USART) += $(drivers-uart)/uart-tinyavr_usart.c
+c_src-$(CONFIG_UART_RENESAS_RA4_SCI) += $(drivers-uart)/uart-renesas_ra4_sci.c
