--- a/drivers/gpio/Kconfig
+++ b/drivers/gpio/Kconfig
@@ -40,4 +40,8 @@ config GPIO_RENESAS_RA4
        depends on ARM
        bool "Renesas RA4 GPIOs"
 
+config GPIO_NXP_SIUL2
+       depends on POWERPC
+       bool "NXP SIUL2 GPIOs"
+
 endmenu
