--- a/drivers/adc/Kconfig
+++ b/drivers/adc/Kconfig
@@ -32,4 +32,8 @@ config ADC_RENESAS_RA4
        depends on ARM
        bool "Renesas RA4 Series ADC"
 
+config ADC_NXP_SAR
+       depends on POWERPC
+       bool "NXP MPC56/57xx series SAR ADC"
+
 endmenu
