--- a/drivers/pwm/Kconfig
+++ b/drivers/pwm/Kconfig
@@ -44,4 +44,8 @@ config PWM_RENESAS_RA4_GPT
        depends on ARM
        bool "Renesas RA4 GPT PWM"
 
+config PWM_NXP_EMIOS
+       depends on POWERPC
+       bool "NXP eMIOS PWM"
+
 endmenu
