--- a/drivers/pwm/Makefile
+++ b/drivers/pwm/Makefile
@@ -14,3 +14,4 @@ c_src-$(CONFIG_PWM_STM32H7XX) += $(drivers-pwm)/pwm-stm32h7xx_tim.c
 c_src-$(CONFIG_PWM_TI_EPWM) += $(drivers-pwm)/pwm-ti_epwm.c
 c_src-$(CONFIG_PWM_TINYAVR) += $(drivers-pwm)/pwm-tinyavr_tca.c
 c_src-$(CONFIG_PWM_RENESAS_RA4_GPT) += $(drivers-pwm)/pwm-renesas_ra4_gpt.c
+c_src-$(CONFIG_PWM_NXP_EMIOS) += $(drivers-pwm)/pwm-nxp_emios.c
