--- a/drivers/can/Makefile
+++ b/drivers/can/Makefile
@@ -5,3 +5,4 @@ drivers-can := $(srctree)/drivers/can
 
 c_src-$(CONFIG_CAN_TI_DCAN) += $(drivers-can)/can-ti_dcan.c
 c_src-$(CONFIG_CAN_ATSAM3X) += $(drivers-can)/can-sam3x.c
+c_src-$(CONFIG_CAN_NXP_FLEXCAN) += $(drivers-can)/can-nxp_flexcan.c
