--- a/drivers/uart/Makefile
+++ b/drivers/uart/Makefile
@@ -12,3 +12,4 @@ c_src-$(CONFIG_UART_ATSAM3X) += $(drivers-uart)/uart-sam3x.c
 c_src-$(CONFIG_UART_STM32H7XX) += $(drivers-uart)/uart-stm32h7xx.c
 c_src-$(CONFIG_UART_TINYAVR_USART) += $(drivers-uart)/uart-tinyavr_usart.c
 c_src-$(CONFIG_UART_RENESAS_RA4_SCI) += $(drivers-uart)/uart-renesas_ra4_sci.c
+c_src-$(CONFIG_UART_NXP_LINFLEXD) += $(drivers-uart)/uart-nxp_linflexd.c
