spi: unstaged NXP DPSI driver

--- a/drivers/spi/Kconfig
+++ b/drivers/spi/Kconfig
@@ -43,5 +43,9 @@ config SPI_TINYAVR
 config SPI_RENESAS_RA4
        depends on ARM
        bool "Renesas RA4 SPI"
-
+       
+config SPI_NXP_DSPI
+       depends on POWERPC
+       bool "NXP dSPI"
+       
 endmenu
