demo: unstaged NXP Devkit-MPC5748G test software

--- a/demo/devkit-mpc5748g/Makefile
+++ b/demo/devkit-mpc5748g/Makefile
@@ -7,7 +7,7 @@ c_src-y += devkit-mpc5748g.c
 # avoid double-inclusion
 ifneq ($(skip-makefile),1)
 PWD := $(shell pwd)
-KBUILD_SRC := ../../..
+PICORTOS_SRC := ../..
 
 TARGETS := devkit-mpc5748g_ram.elf
 TARGETS += devkit-mpc5748g_flash.elf
@@ -20,11 +20,11 @@ all: $(TARGETS)
 	@
 
 %.elf: FORCE
-	$(Q)$(MAKE) -C $(KBUILD_SRC) O=$(PWD) $(defconfig)
-	$(Q)$(MAKE) -C $(KBUILD_SRC) O=$(PWD) TARGET=$@
+	$(Q)$(MAKE) -C $(PICORTOS_SRC) O=$(PWD) $(defconfig)
+	$(Q)$(MAKE) -C $(PICORTOS_SRC) O=$(PWD) TARGET=$@
 
 %:
-	$(Q)$(MAKE) -C $(KBUILD_SRC) O=$(PWD) $@
+	$(Q)$(MAKE) -C $(PICORTOS_SRC) O=$(PWD) $@
 
 PHONY += FORCE
 FORCE:
